--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,7 +1,9 @@
 ul li{
     color: #d7dada;
     display:inline-block;
+    list-style-type:none;
     border:#78AB3B 5px solid;
+    background-color:#78AB3B;
     margin-left:30px;
     padding:10px;
 }
