--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,10 +1,14 @@
-.nav li {
+ul {
+    list-style-type:none;
+    color: #78AB3B;
+    width:300px;
+    border: #78AB3B 5px solid;
+    margin-left:0;
+}
+li {
     color: #d7dada;
     display: inline-block;
-    list-style-type: none;      
     text-align: center;
-    border: #78AB3B 5px solid;
-    background-color: #78AB3B;
     margin-left: 30px;
     padding: 10px;
 }
