--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,7 +1,15 @@
-a {
+.nav {
+background-color: #78AB3B;
+color: #d7dada;
+list-style:none;
+text-align:center;
+padding: 30px;
+}
+.nav > li {
+    display:inline-block;
+    padding-right: 50px;
+}
+.nav > li > a {
+    text-decoration: none;
     color: #d7dada;
-    display: inline-block;
-    text-align: center;
-    margin-left: 30px;
-    padding: 10px;
 }
