--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -1,15 +1,44 @@
-.nav {
-background-color: #78AB3B;
-color: #d7dada;
-list-style:none;
-text-align:center;
-padding: 200px;
-}
-.nav > li {
-    display:inline-block;
-    padding-right: 200px;
-}
-.nav > li > a {
-    text-decoration: none;
+*{
+    background-color: #222659;
     color: #d7dada;
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+nav>ul li {
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+    color: #D7DADA;
+    float: left;
+}
+nav a {
+    text-decoration: none;
+    display: inline-block;
+    background-color: #78AB3B;
+    padding: 15px 15px 15px 15px;
+    width: 200px; 
+    margin: 2px;
+}
+
+nav ul>li ul {
+    position: absolute;
+    top: 100%;
+    display: none;
+}
+nav ul ul li {
+    float:none;
+}
+
+nav>ul>li:hover>ul{
+    display: block;
+}
+
+footer{
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 50px;
 }
