--- a/islt_7310/nav.css
+++ b/islt_7310/nav.css
@@ -6,6 +6,8 @@ nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    display:inline-block;
+
 }
 nav>ul li {
     position: relative;
@@ -23,7 +25,7 @@ nav a {
     margin: 2px;
 }
 
-nav ul>li ul {
+nav ul>li ul{
     position: absolute;
     top: 100%;
     display: none;
@@ -37,8 +39,8 @@ nav>ul>li:hover>ul{
 }
 
 footer{
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
-    height: 50px;
+    height: 0px;
 }
