--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -5,7 +5,25 @@ body {
     border: none;
     margin: 2px;
 }
+
 main {
-    border: none;
-    margin: 20px;
+    display: grid;
+    grid-template: 50px / 700px;
+    grid-gap: 15px 20px;
+}
+
+@media screen and (max-width:480px){
+    main {
+        display: grid;
+        grid-template: 20px / 300px;
+        grid-gap: 10px 15px;
+    }
+}
+
+@media screen and (max-width:800px){
+    main{
+        display: grid; 
+        grid-template: 40px / 500px;
+        grid-gap: 15px 20px;
+    }
 }
