--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -16,9 +16,17 @@ main {
     main {
         display: grid;
         grid-template: 20px / 400px;
-        grid-gap: 10px 15px;
-    }
+        grid-gap: 10px 15px;}
+    .responsive-iframe{
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;}
 }
+
 
 @media screen and (max-width:800px){
     main{
