--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -32,6 +32,13 @@ main {
     main{
         display: grid; 
         grid-template: 40px / 600px;
-        grid-gap: 15px 20px;
-    }
+        grid-gap: 15px 20px;}
+    .responsive-iframe{
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;}
 }
