--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -1,6 +1,10 @@
 .heading {color: #78ab3b;}
 .paragraph::first-letter {font-size: 150%;}
-.subparagraph {text-indent: 2em;}
+.subparagraph {text-indent: 2em;
+                margin: 0;
+            padding: 0;}
+h3 {margin: 0;
+    padding: 0;}
 body {
     border: none;
     margin: 2px;
@@ -8,22 +12,22 @@ body {
 
 main {
     display: grid;
-    grid-template: 50px / 700px;
-    grid-gap: 15px 20px;
+    grid-template: 20px / 700px;
+    grid-gap: 50px 20px;
+    font-size: 20px;
 }
 
 @media screen and (max-width:600px){
     main {
         display: grid;
-        grid-template: 20px / 200px;
-        grid-gap: 10px 15px;
-        font-size: 40px;}
+        grid-template: auto / auto;
+        grid-gap: 5px 10px;}
 }
 
 
 @media screen and (max-width:800px){
     main{
         display: grid; 
-        grid-template: 40px / 600px;
+        grid-template: auto / auto;
         grid-gap: 15px 20px;}
 }
