--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -11,8 +11,6 @@
 .subparagraph {text-indent: 2em;
                 margin: 0;
             padding: 0;}
-h3 {margin: 0;
-    padding: 0;}
 body {
     border: none;
     margin: 2px;
@@ -21,27 +19,61 @@ body {
 .heading {color: #78ab3b;
     font-family: Helvetica;
 }
-main {
+.about-heading{
+    padding-left: 50%;
+    padding-right: 50%;
+    padding-top:0;
+    padding-bottom:0;
+}
+.grid-container {
     display: grid;
-    grid-template: 20px / 700px;
-    grid-gap: 50px 20px;
+    grid-template-columns: 1fr;
+    grid-auto-rows: minmax(10px, 200px);
     font-size: 20px;
+}
+.grid-container-1 {
+    width: 200px;
+    height: 200px;
+    padding-left: 45%;
+    padding-right: 50%;
+}
+.grid-container-2 {
+    padding-top: 10px;
+}
+
+footer{
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 0px;
+    font-family: Helvetica;
 }
 
 @media screen and (max-width:600px){
-    main {
+    .grid-container {
         display: grid;
-        grid-template: auto / auto;
-        grid-gap: 5px 10px;
+        grid-template-columns: 1fr;
         font-size: 3.5vw; }
+    .grid-container-1 {
+        width: 200px;
+        height: 200px;
+        padding-left: 100px;
+        padding-right: 100px;
+        }
 }
 
 
 @media screen and (max-width:800px){
-    main{
+    .grid-container{
         display: grid; 
-        grid-template: auto / auto;
-        grid-gap: 15px 20px;}
+        grid-template-columns: 1fr;
+    }
+    .grid-container-1 {
+        width: 200px;
+        height: 200px;
+        padding-left: 100px;
+        padding-right: 100px;
+    }
 }
 
 /*print style sheet*/
@@ -65,6 +97,6 @@ main {
         text-align:center;
     }
     @page{
-        margin:1cm;
+        margin:1in;
     }
 }
