--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -43,11 +43,13 @@ body {
 
 footer{
     position: relative;
-    bottom: 0;
     width: 100%;
-    height: 0px;
+    height: 5px;
     font-family: Helvetica;
+    background-image: url(image/background.jpg);
+    background-size: cover;
 }
+
 
 @media screen and (max-width:600px){
     .grid-container {
