--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -40,17 +40,33 @@ body {
 .grid-container-2 {
     padding-top: 10px;
 }
-
+.grid-container-3 {
+    width: 100%;
+    height: 400%;
+}
 footer{
     position: relative;
     width: 100%;
-    height: 5px;
+    line-height: 0px;
     font-family: Helvetica;
-    background-image: url(image/background.jpg);
+    padding: 2px;
+    background-image: url("images/background.jpg");
     background-size: cover;
 }
-
-
+#phone {
+    transition: transform .2s; /*animation */
+    margin: 0 auto;
+}
+#phone:hover {
+transform: scale(1.5);
+}
+#email {
+    transition: transform .2s; /*animation */
+    margin: 0 auto;
+}
+#email:hover {
+transform: scale(1.5);
+}
 @media screen and (max-width:600px){
     .grid-container {
         display: grid;
