--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -16,6 +16,11 @@ body {
     margin: 2px;
     font-family: Garamond;
 }
+#lesson{
+    width:40%;
+    height:40%;
+    padding-left:20%;
+}
 .heading {color: #78ab3b;
     font-family: Helvetica;
 }
@@ -38,7 +43,7 @@ body {
     padding-right: 50%;
 }
 .grid-container-2 {
-    padding-top: 10px;
+    padding-top: 20px;
 }
 .grid-container-3 {
     width: 100%;
@@ -67,6 +72,21 @@ transform: scale(1.5);
 #email:hover {
 transform: scale(1.5);
 }
+#Tokyo-Academics {
+    width:30%;
+    height:30%;
+    padding-left:35%;
+}
+#Spark {
+    width:20%;
+    height:20%;
+    padding-left:35%;
+}
+#Women-Without-Borders {
+    width:20%;
+    height:20%;
+    padding-left:35%;
+}
 @media screen and (max-width:600px){
     .grid-container {
         display: grid;
@@ -78,6 +98,20 @@ transform: scale(1.5);
         padding-left: 100px;
         padding-right: 100px;
         }
+    #Tokyo-Academics {
+        width:70%;
+        height:70%;
+        padding-left:20%;
+    }
+    #Spark{
+        width:40%;
+        height:30%;
+    }
+    #Women-Without-Borders {
+        width:30%;
+        height:30%;
+        padding-left:35%;
+    }
 }
 
 
