--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -107,6 +107,12 @@ transform: scale(1.5);
     height:20%;
     padding-left:35%;
 }
+#fname, #lname, #email{
+    width:20%;
+}
+#message{
+    width:30%;
+}
 @media screen and (max-width:600px){
     body{
         font-size:3.5vw;
@@ -138,6 +144,12 @@ transform: scale(1.5);
     table{
         width:90%;
     }
+    #fname, #lname, #email{
+        width:40%;
+    }
+    #message{
+        width:60%;
+    }
 }
 
 
@@ -157,6 +169,12 @@ transform: scale(1.5);
     }
     table{
         width:80%;
+    }
+    #fname, #lname, #email{
+        width:30%;
+    }
+    #message{
+        width:50%;
     }
 }
 
