--- a/islt_7310/style.css
+++ b/islt_7310/style.css
@@ -53,7 +53,7 @@ body {
 }
 .grid-container-3 {
     width: 100%;
-    height: 400%;
+    height: 200%;
 }
 table{
     width:50%;
@@ -132,6 +132,9 @@ transform: scale(1.5);
         padding-left: 100px;
         padding-right: 100px;
         }
+    .grid-container-3 {
+        width:100%;
+    }
     #Tokyo-Academics {
         width:70%;
         height:70%;
@@ -171,6 +174,9 @@ transform: scale(1.5);
         height: 200px;
         padding-left: 100px;
         padding-right: 100px;
+    }
+    .grid-container-3 {
+        width:80%;
     }
     table{
         width:80%;
